--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Datepicker</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <title>Sass demo</title>
   </head>
   <body>
     <h1>Your own app</h1>
