--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Sass demo</title>
-  </head>
-  <body>
-    <h1>Your own app</h1>
-    <div id="root">
+<html lang="en">
 
-    </div>
+<head>
+    <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Music Finder</title>
+</head>
+
+<body>
+    <div id="root"></div>
     <script src="dist/bundle.js"></script>
-  </body>
+</body>
+
 </html>
